# cpp_starter

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
src/lib/: add.h
tests/: test_add.cpp
